# persistence

./: README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
design/v2/: README.md  manager.py
design/v2/backends/: sqlite_backend.py
design/v2/tests/: conftest.py  test_manager.py  test_sqlite_concurrency.py
oj_persistence/: __init__.py  async_manager.py  base.py  exceptions.py  manager.py  refs.py  relation.py
oj_persistence/backends/: csv_backend.py  dynamodb_backend.py  in_memory_backend.py  json_backend.py  ndjson_backend.py  redis_backend.py  s3_backend.py  sqlalchemy_backend.py  sqlite_backend.py  tinydb_backend.py
oj_persistence/store/: __init__.py  abstract_file.py  async_base.py  async_in_memory.py  async_ndjson_file.py  async_redis_store.py  async_sqlalchemy_store.py  async_sqlite.py  async_versioned.py  base.py  csv_file.py  flat_file.py  ijson_file.py  in_memory.py  ndjson_file.py  redis_store.py  sqlalchemy_store.py  sqlite.py  tinydb_store.py  versioned.py
oj_persistence/utils/: compression.py  join.py  relation.py  rwlock.py  streaming.py
test/int/: test_manager.py  test_manager_concurrent.py  test_manager_join.py
test/unit/: conftest.py  test_async_persistence_manager.py  test_dynamodb_backend.py  test_manager.py  test_persistence_manager.py  test_relate.py  test_s3_backend.py  test_sqlite_concurrency.py  test_sqlite_live_repro.py  test_store_groups.py  test_upsert_guard.py
test/unit/store/: async_contract.py  contract.py  test_async_in_memory.py  test_async_ndjson_file.py  test_async_redis_store.py  test_async_sqlalchemy_store.py  test_async_sqlite.py  test_async_versioned.py  test_compression.py  test_concurrent_access.py  test_csv_file.py  test_flat_file.py  test_ijson_file.py  test_in_memory.py  test_list_by_field.py  test_ndjson_file.py  test_redis_store.py  test_sqlalchemy_store.py  test_sqlite.py  test_tinydb_store.py  test_versioned.py
test/unit/utils/: test_rwlock.py  test_streaming.py
