[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "oj-persistence"
version = "0.0.3"
description = "Thread-safe persistence management with pluggable storage backends"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Speedy", email = "speedy@ownjoo.org" }
]
requires-python = ">=3.11"
dependencies = [
    "ijson",
    "tinydb",
    "sqlalchemy>=2.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = ["aiosqlite", "fakeredis[lua]", "pytest"]

[project.urls]
Repository = "https://github.com/ownjoo-org/persistence"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, undefined names, etc.)
    "I",      # isort
    "UP",     # pyupgrade (modernise syntax for target Python version)
    "B",      # flake8-bugbear (common bug patterns)
    "ASYNC",  # flake8-async (async best practices)
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["oj_persistence"]

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false  # trailing comma forces vertical expansion

[tool.pytest.ini_options]
testpaths = ["test"]
